--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -265,7 +265,7 @@ var controllersInLocalStorage = [
 
 var presetControllers = {};
 
-// PRESET                             #0   #1   #2   #3   #4   #5   #6   #7   
+// Preset                             #0   #1   #2   #3   #4   #5   #6   #7   
 presetControllers[OSC_1_WAVE     ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
 presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 presetControllers[OSC_1_MORPH    ] = [64 , 64 , 64 , 64 , 64 , 0  , 0  , 0  ];
