Added the function of writing user programs to the flash (4)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -46,6 +46,9 @@ const APP_NAME_VERSION = "PRA32-U CTRL v2.0.1";
 const MIDI_CH        = 0;       // 0-based
 
 
+const PRESET_PROGRAM_NUMBER_MAX = 7;
+const PROGRAM_NUMBER_MAX        = 15;
+
 const NOTE_OFF       = 0x80;
 const NOTE_ON        = 0x90;
 const CONTROL_CHANGE = 0xB0;
@@ -118,6 +121,8 @@ const DELAY_TIME      = 90;
 const DELAY_MODE      = 35;
 
 
+const PROG_SEL_TO_W   = 93;
+const W_PROG_TO_FLASH = 105;
 const PC_BY_CC_8      = 112;
 const PC_BY_CC_9      = 113;
 const PC_BY_CC_10     = 114;
@@ -783,6 +788,22 @@ function sendProgramChange(number) {
   }
 }
 
+function writeProgram(number) {
+  var r = confirm("Write the current parameters to the program #" + String(number) + " in the main unit?");
+  if (r == false) {
+    return;
+  }
+
+  if (midiOutput) {
+    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), PROG_SEL_TO_W,   number - (PROGRAM_NUMBER_MAX - PRESET_PROGRAM_NUMBER_MAX)]);
+    sleep(0);
+    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), W_PROG_TO_FLASH, 0]);
+    sleep(0);
+    midiOutput.send([(CONTROL_CHANGE | MIDI_CH), W_PROG_TO_FLASH, 1]);
+    sleep(0);
+  }
+}
+
 function noteOn(noteNumber) {
   if (midiOutput) {
     midiOutput.send([(NOTE_ON | MIDI_CH), noteNumber + transpose, 100]);
@@ -1111,13 +1132,13 @@ function getStoredCCValueString(index, number) {
 <table>
 <tr><td>Program Change</td>
     <td></td>
-    <td><input type="button" value="#4 "     onclick="sendProgramChange(4)"></td>
+    <td><input type="button" value="#4 "     onclick="sendProgramChange(4)" ></td>
     <td></td>
-    <td><input type="button" value="#5 "     onclick="sendProgramChange(5)"></td>
+    <td><input type="button" value="#5 "     onclick="sendProgramChange(5)" ></td>
     <td></td>
-    <td><input type="button" value="#6 "     onclick="sendProgramChange(6)"></td>
+    <td><input type="button" value="#6 "     onclick="sendProgramChange(6)" ></td>
     <td></td>
-    <td><input type="button" value="#7 "     onclick="sendProgramChange(7)"></td>
+    <td><input type="button" value="#7 "     onclick="sendProgramChange(7)" ></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td></td>
     <td><input type="button" value="#12"     onclick="sendProgramChange(12)"></td>
@@ -1128,6 +1149,15 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#15"     onclick="sendProgramChange(15)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>Write Program</td>
+    <td></td>
+    <td><input type="button" value="#12"     onclick="writeProgram(12)"></td>
+    <td></td>
+    <td><input type="button" value="#13"     onclick="writeProgram(13)"></td>
+    <td></td>
+    <td><input type="button" value="#14"     onclick="writeProgram(14)"></td>
+    <td></td>
+    <td><input type="button" value="#15"     onclick="writeProgram(15)"></td>
     </tr>
 <tr><td>(to Main Unit)</td>
     <td></td>
@@ -1135,9 +1165,9 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#1 "     onclick="sendProgramChange(1)" ></td>
     <td></td>
-    <td><input type="button" value="#2 "     onclick="sendProgramChange(2)"></td>
+    <td><input type="button" value="#2 "     onclick="sendProgramChange(2)" ></td>
     <td></td>
-    <td><input type="button" value="#3 "     onclick="sendProgramChange(3)"></td>
+    <td><input type="button" value="#3 "     onclick="sendProgramChange(3)" ></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td></td>
     <td><input type="button" value="#8 "     onclick="sendProgramChange(8)" ></td>
@@ -1147,6 +1177,16 @@ function getStoredCCValueString(index, number) {
     <td><input type="button" value="#10"     onclick="sendProgramChange(10)"></td>
     <td></td>
     <td><input type="button" value="#11"     onclick="sendProgramChange(11)"></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>(to Main Unit)</td>
+    <td></td>
+    <td><input type="button" value="#8 "     onclick="writeProgram(8)" ></td>
+    <td></td>
+    <td><input type="button" value="#9 "     onclick="writeProgram(9)" ></td>
+    <td></td>
+    <td><input type="button" value="#10"     onclick="writeProgram(10)"></td>
+    <td></td>
+    <td><input type="button" value="#11"     onclick="writeProgram(11)"></td>
     </tr>
 </table>
 
